hphp/test/slow/reified-generics/shadowing-reified-param-class.php.expectf
Fatal error: You may not shadow a reified parameter in %s on line 3
